@@ -27,6 +27,7 @@ Added ZSF snapshot support for Jupiter Ace, Z88
 Added --slotcard-num setting to insert a Z88 card in a numbered slot (1, 2 or 3)
 Added ZRCP command mmc-reload to reload MMC image
 Added ZEsarUX logo on the window footer
+Added wav/rwa/smp tape audio browser, to view Spectrum tape blocks from audio file
 
 
 Improved Debug CPU Window:
